--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/index.css" />
-    <title>JS starter</title>
+    <title>JS Calculator</title>
   </head>
   <body>
-    <h1>Simple calculator</h1>
+    <h1>Js Calculator</h1>
     <script src="./src/index.js"></script>
   </body>
 </html>
